Centred text and corrected alignment of elements in the credential grid

--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,21 @@
 .info-component {
   margin-top: 40px;
   margin-bottom: 40px;
+  text-align: center;
 }
 
 .info-component h1 {
   margin-bottom: 20px;
+}
+
+.info-component {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#search-credentials {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .credentials-grid {
@@ -21,19 +32,29 @@
 }
 
 .credentials-search input {
-  width: 90%;
+  width: 100%;
   padding: 10px;
   margin-bottom: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .credential-item {
   margin: 10px;
   padding: 10px;
   width: 300px;
+  height: 200px;
+  text-align: left;
   position: relative;  /* Add this to make it the positioning context */
 }
+
+/*.credential-item h2 {
+  margin-left: 0px;
+  margin-right: 0px;
+  
+}*/
 
 .credential-item a {
   text-decoration: none !important;
@@ -51,9 +72,12 @@
 
 .credential-company {
   height: 80%;
+  padding-left: 0px;
+  padding-right: 0px;
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   /* flex-direction: column; */
 }
 
